# qt-signal-hub

./: CMakeLists.txt  README.md  test_server.py
qml/: Main.qml
qml/components/: MessageCard.qml  StatusBadge.qml
qml/views/: ConnectionView.qml  FeedView.qml
src/: main.cpp
src/app/: AppController.cpp  AppController.h  AppState.cpp  AppState.h
src/models/: MessageFeedModel.cpp  MessageFeedModel.h  MessageItem.h
src/network/: ConnectionManager.cpp  ConnectionManager.h  ConnectionTypes.h  IConnectionClient.h  WebSocketClient.cpp  WebSocketClient.h
src/services/: MessageParser.cpp  MessageParser.h  MessageRouter.cpp  MessageRouter.h
src/settings/: SettingsManager.cpp  SettingsManager.h
src/workers/: ParsingWorker.cpp  ParsingWorker.h
